--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DEJA DE SOBREVIVIR y empieza a VIVIR con propósito | EVO Fridamental</title>
-  <link rel="icon" href="../../../../Downloads/favicon/favicon.ico" type="image/x-icon">	
+  <link rel="icon" href="favicon.ico" type="image/x-icon">	
   <meta name="description" content="Taller vivencial y gratuito: reconecta con lo que realmente quieres, enciende tu propósito y sal con un plan claro para vivirlo.">
   <meta property="og:title" content="DEJA DE SOBREVIVIR y empieza a vivir con propósito" />
   <meta property="og:description" content="Únete al taller vivencial (gratuito). Cupo limitado." />
@@ -125,7 +125,7 @@
   <!-- Meta Pixel Code (reemplaza YOUR_PIXEL_ID) -->
   <script>
     // Reemplaza con tu enlace de WhatsApp (mismo para todos los botones)
-    const WHATSAPP_URL = "https://chat.whatsapp.com/TU_LINK_DE_GRUPO";
+    const WHATSAPP_URL = "https://chat.whatsapp.com/L1EwMSe9ffT4rRK0NoXai1?mode=ems_copy_t";
   </script>
 
   <script>
@@ -149,7 +149,7 @@
 <body>
   <div class="wrap">
     <header class="card">
-	<img src="../Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
+	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
       <p class="muted"></p>
       <!-- Opcional: pega el ID de tu video de YouTube -->
@@ -270,3 +270,4 @@
   </script>
 </body>
 </html>
+
