--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <header class="card">
 	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
+	  <p> Sábado 18 de Octubre del 2025 </p>	
       <p class="muted"></p>
       <!-- Opcional: pega el ID de tu video de YouTube -->
       <div class="video" id="video-embed" style="display:none;">
@@ -270,4 +271,5 @@
   </script>
 </body>
 </html>
+
 
