--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
     <header class="card">
 	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
-	  <p style="text-align:center;"><strong>Sábado 18 de Octubre del 2025</strong></p>
+	  <p style="text-align:center; font-weight:700; color:#5f0092;">
+  Sábado 18 de Octubre del 2025
+</p>
       <p class="muted"></p>
       <!-- Opcional: pega el ID de tu video de YouTube -->
       <div class="video" id="video-embed" style="display:none;">
@@ -271,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
