--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
 	  <p style="text-align:center; font-weight:700; color:#5f0092;">
-  Sábado 18 de Octubre del 2025
+  Sábado 18 de Octubre del 2025 <br> En Linea
 </p>
       <p class="muted"></p>
       <!-- Opcional: pega el ID de tu video de YouTube -->
@@ -273,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
