--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <header class="card">
 	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
-	  <p style="text-align:center; font-weight:700; color:#5f0092;">
+	  <p style="text-align:center; font-weight:700;">
   Sábado 18 de Octubre del 2025 <br> En Linea
 </p>
       <p class="muted"></p>
@@ -273,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
