--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<img src="Logotipo Nuevo.png" alt="EVO Fridamental" class="logo">
       <h1>DEJA DE SOBREVIVIR <br>y empieza a VIVIR con propósito </h1>
 	  <p style="text-align:center; font-weight:700;">
-  Sábado 18 de Octubre del 2025 <br> En Linea
+  Sábado 18 de Octubre del 2025 <br> En Linea <br> Hora: 11:00 am
 </p>
       <p class="muted"></p>
       <!-- Opcional: pega el ID de tu video de YouTube -->
@@ -226,9 +226,9 @@
           <li>Dejarte con un plan claro para empezar a vivirlo.</li>
         </ul>
       <div class="kpis">
-        <div class="kpi"><b>📅 Fecha:</b> Lunes 25 de agosto</div>
-        <div class="kpi"><b>🕖 Hora:</b> 7:00 pm</div>
-        <div class="kpi"><b>📍 Modalidad:</b> Presencial – EVO Fridamental</div>
+        <div class="kpi"><b>📅 Fecha:</b> Sábado 18 de octubre</div>
+        <div class="kpi"><b>🕖 Hora:</b> 11:00 am</div>
+        <div class="kpi"><b>📍 Modalidad:</b> En línea – EVO Fridamental</div>
         <div class="kpi"><b>💰 Inversión:</b> Gratuito — cupo limitado</div>
       </div>
       <a class="cta" href="#" target="_blank" rel="noopener">
@@ -244,7 +244,7 @@
       <a class="cta" href="#" target="_blank" rel="noopener">
         <span class="pin">📌</span> <span>Reservar mi lugar</span> <small>(últimos cupos)</small>
       </a>
-      <p class="footer">Nos vemos en <b>DEJA DE SOBREVIVIR</b> y empieza a VIVIR con propósito. Lo demás, lo vivirás ahí.</p>
+      <p class="footer">Nos vemos en <b>DEJA DE SOBREVIVIR</b> y empieza a VIVIR con propósito.</p>
     </section>
 
     <div class="badge">
@@ -273,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
