--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="kpis">
         <div class="kpi"><b>📅 Fecha:</b> Sábado 18 de octubre</div>
         <div class="kpi"><b>🕖 Hora:</b> 11:00 am</div>
-        <div class="kpi"><b>📍 Modalidad:</b> En línea – EVO Fridamental</div>
+        <div class="kpi"><b>🌐 Modalidad:</b> En línea </div>
         <div class="kpi"><b>💰 Inversión:</b> Gratuito — cupo limitado</div>
       </div>
       <a class="cta" href="#" target="_blank" rel="noopener">
@@ -273,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
